crates/compiler/src/tests/e2e/good/0357_struct_point_generic/main.gom
struct Point { x: int32, y: int32 }

fn identity[T](val: T) -> T { val }

fn main() {
    let p = identity(Point { x: 1, y: 2 });
    println(p.x.to_string() + "," + p.y.to_string());
}
