crates/compiler/src/tests/e2e/bad/0574_recursive_generic_struct_specialization/main.gom
struct Weird[T] {
    next: Weird[(T, T)],
}

fn f(x: Weird[int32]) -> unit {
    ()
}

fn main() -> unit {
    println("ok")
}
